--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "history": "^4.10.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "reactn": "^2.2.4",
+    "sweetalert": "^2.1.2",
+    "uikit": "^3.2.7",
+    "uikit-icons": "^0.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
